RESOLVED FIXED144581
[CSS Grid Layout] min-content row does not always shrink
https://bugs.webkit.org/show_bug.cgi?id=144581
Summary [CSS Grid Layout] min-content row does not always shrink
Javier Fernandez
Reported 2015-05-04 09:42:14 PDT
Example URL: http://www.scirra.com/labs/bugs/gridmincontent.html Steps to reproduce the problem: 1. Visit the given URL 2. Click "Make 250px wide". Notice that since the width is now smaller, the text flows down further and makes the grid row taller. 3. Click "Make 500px wide", which restores the original width. Notice the grid height does not shrink back down to min-content: it stays the same height. 4. Click "Force reflow", which detaches then reinserts the grid to the DOM. It restores the correct height. What is the expected behavior? The grid should look the same on startup and after clicking both "Make 250px wide" and "Make 500px wide". Instead, it is too tall. What went wrong? After setting the width back to 500px, the grid should shrink the height back to min-content. Instead it stays the same height.
Attachments
Patch (10.43 KB, patch)
2015-10-29 03:22 PDT, Sergio Villar Senin
zalan: review+
Sergio Villar Senin
Comment 1 2015-10-29 03:22:02 PDT
Sergio Villar Senin
Comment 2 2015-11-02 01:03:48 PST
Note You need to log in before you can comment on or make changes to this bug.